--- a/src/OpenFileSystem.Tests/OpenFileSystem.Tests.csproj
+++ b/src/OpenFileSystem.Tests/OpenFileSystem.Tests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{0174E0E7-B915-46A9-B3D8-D62007E55694}</ProjectGuid>
+    <ProjectGuid>{A5EB0BFC-609D-46CB-8FFB-F8F3065ABB11}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OpenFileSystem.IO</RootNamespace>
-    <AssemblyName>OpenFileSystem</AssemblyName>
+    <RootNamespace>OpenFileSystem.Tests</RootNamespace>
+    <AssemblyName>OpenFileSystem.Tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.5.5.10112, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\nunit-2.5.5\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -45,32 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileExtensions.cs" />
-    <Compile Include="FileSystems\AbstractDirectory.cs" />
-    <Compile Include="FileSystems\AbstractFileSystem.cs" />
-    <Compile Include="FileSystems\InMemory\InMemoryDirectory.cs" />
-    <Compile Include="FileSystems\InMemory\InMemoryFile.cs" />
-    <Compile Include="FileSystems\InMemory\InMemoryFileSystem.cs" />
-    <Compile Include="FileSystems\InMemory\InMemoryTemporaryDirectory.cs" />
-    <Compile Include="FileSystems\InMemory\InMemoryTemporaryFile.cs" />
-    <Compile Include="FileSystems\Local\LocalDirectory.cs" />
-    <Compile Include="FileSystems\Local\LocalFile.cs" />
-    <Compile Include="FileSystems\Local\LocalFileSystem.cs" />
-    <Compile Include="FileSystems\Local\LocalPath.cs" />
-    <Compile Include="FileSystems\Local\TemporaryLocalDirectory.cs" />
-    <Compile Include="FileSystems\Local\TemporaryLocalFile.cs" />
-    <Compile Include="FileSystems\Local\Unix\UnixFileSystem.cs" />
-    <Compile Include="FileSystems\Local\Win32\Win32FileSystem.cs" />
-    <Compile Include="FileSystems\NonDisposableStream.cs" />
-    <Compile Include="IDirectory.cs" />
-    <Compile Include="IFile.cs" />
-    <Compile Include="IFileSystem.cs" />
-    <Compile Include="IFileSystemItem.cs" />
-    <Compile Include="IPath.cs" />
-    <Compile Include="ITemporaryDirectory.cs" />
-    <Compile Include="ITemporaryFile.cs" />
+    <Compile Include="context.cs" />
+    <Compile Include="FileSystem_context.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringExtensions.cs" />
+    <Compile Include="SpecExtensions.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OpenFileSystem\OpenFileSystem.csproj">
+      <Project>{0174E0E7-B915-46A9-B3D8-D62007E55694}</Project>
+      <Name>OpenFileSystem</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
