--- a/src/OpenFileSystem.Tests/OpenFileSystem.Tests.csproj
+++ b/src/OpenFileSystem.Tests/OpenFileSystem.Tests.csproj
@@ -58,6 +58,11 @@
     <Compile Include="context.cs" />
     <Compile Include="FileSystem_context.cs" />
     <Compile Include="InMemoryFileSystem_specs.cs" />
+    <Compile Include="open_for_write\context.cs" />
+    <Compile Include="open_for_write\existing_file.cs" />
+    <Compile Include="open_for_write\non_existent_file.cs" />
+    <Compile Include="open_for_write\open_behavior_is_same.cs" />
+    <Compile Include="StreamExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecExtensions.cs" />
   </ItemGroup>
@@ -67,6 +72,7 @@
       <Name>OpenFileSystem</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
