--- a/src/OpenFileSystem.Tests/OpenFileSystem.Tests.csproj
+++ b/src/OpenFileSystem.Tests/OpenFileSystem.Tests.csproj
@@ -62,9 +62,12 @@
     <Compile Include="open_for_write\existing_file.cs" />
     <Compile Include="open_for_write\non_existent_file.cs" />
     <Compile Include="open_for_write\open_behavior_is_same.cs" />
+    <Compile Include="paths\file_names.cs" />
     <Compile Include="StreamExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecExtensions.cs" />
+    <Compile Include="writing_content\using_append.cs" />
+    <Compile Include="writing_content\using_opencreate.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OpenFileSystem\OpenFileSystem.csproj">
