--- a/src/OpenFileSystem.Tests/OpenFileSystem.Tests.csproj
+++ b/src/OpenFileSystem.Tests/OpenFileSystem.Tests.csproj
@@ -56,6 +56,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="context.cs" />
+    <Compile Include="directory_searches\recursive_directory_search.cs" />
+    <Compile Include="directory_searches\search_for_absolute_paths.cs" />
     <Compile Include="FileSystem_context.cs" />
     <Compile Include="InMemoryFileSystem_specs.cs" />
     <Compile Include="open_for_write\context.cs" />
@@ -63,6 +65,8 @@
     <Compile Include="open_for_write\non_existent_file.cs" />
     <Compile Include="open_for_write\open_behavior_is_same.cs" />
     <Compile Include="paths\file_names.cs" />
+    <Compile Include="contexts\file_search_context.cs" />
+    <Compile Include="file_searches\recursive_search_finds_directory.cs" />
     <Compile Include="StreamExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecExtensions.cs" />
