--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,19 @@ _ReSharper.*
 Thumbs.db
 *.cache
 .svn
+
+*.userprefs
+
+*.user
+
+src/OpenFileSystem.Tests/test-results/OpenFileSystem.Tests.csproj-Debug-2012-11-21.xml
+
+src/OpenFileSystem.Tests/test-results/OpenFileSystem.Tests.csproj.test-cache
+
+src/OpenFileSystem.Tests/test-results/Tests.csproj-Debug-2012-11-21.xml
+
+src/OpenFileSystem.Tests/test-results/Tests.csproj.test-cache
+
+src/nunit.nunit
+
+src/test-results/{A313388C-67F2-4BF1-8874-5C783F07CDB1}-default-2012-11-21.xml
