--- a/src/OpenFileSystem.Tests/Tests.csproj
+++ b/src/OpenFileSystem.Tests/Tests.csproj
@@ -8,8 +8,7 @@
     <ProjectGuid>{A5EB0BFC-609D-46CB-8FFB-F8F3065ABB11}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OpenFileSystem.Tests</RootNamespace>
-    <AssemblyName>OpenFileSystem.Tests</AssemblyName>
+    <AssemblyName>Tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -18,9 +17,9 @@
     <UpgradeBackupLocation />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
+    <DebugSymbols>True</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>False</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -29,7 +28,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>True</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -37,10 +36,6 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.5.5.10112, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\nunit-2.5.5\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -53,6 +48,9 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\lib\nunit-2.5.5\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="context.cs" />
@@ -66,16 +64,21 @@
     <Compile Include="open_for_write\existing_file.cs" />
     <Compile Include="open_for_write\non_existent_file.cs" />
     <Compile Include="open_for_write\open_behavior_is_same.cs" />
+    <Compile Include="OperatingSystem.cs" />
+    <Compile Include="OS.cs" />
     <Compile Include="paths\file_names.cs" />
     <Compile Include="contexts\file_search_context.cs" />
     <Compile Include="file_searches\recursive_search_finds_directory.cs" />
-    <Compile Include="path_specification.cs" />
+    <Compile Include="paths\absolute.cs" />
+    <Compile Include="paths\relative.cs" />
+    <Compile Include="paths\spec.cs" />
     <Compile Include="renaming_files\locked_file.cs" />
     <Compile Include="StreamExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecExtensions.cs" />
     <Compile Include="writing_content\using_append.cs" />
     <Compile Include="writing_content\using_opencreate.cs" />
+    <Compile Include="paths\unc.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OpenFileSystem\OpenFileSystem.csproj">
